# MCP_LAMMPS

./: README.md  cursor_mcp_config.json  pyproject.toml  requirements.txt  slurm_config.yaml  test_basic.py  test_generate_gaff_parameters.py
docs/: CHANGELOG.md  MIGRATION_GUIDE.md  README.md  api-reference.md  configuration.md  contributing.md  examples.md  index.md  installation.md  slurm-guide.md  user-guide.md
examples/: EXAMPLE_OUTPUT.md  QUICKSTART.md  README.md  README_ethanol_simulation.md  README_water_simulation.md  TEST_SUMMARY.md  log.lammps  prompt  run_ethanol_simulation.py  run_simulation.sh  run_water_simulation.py  simulation_summary.md  test_equilibrium_script.py  test_ethanol_setup.py  test_mcp_lammps.ipynb  water_10.data  water_10.lammpstrj  water_simulation.in
examples/input/: liquid_box_1components.json  liquid_box_1components.lmp  liquid_box_1components_pointenergy.in
examples/output/: generic_system.lmp  log.lammps  organic_system.lmp  test_basic_equilibrium.in  test_convenience.lmp  test_convenience_equilibrium.in  test_custom_equilibrium.in  test_openff_ethanol.lmp  test_openff_ethanol_equilibrium.in  test_openff_ethanol_pointenergy.in  test_parsed_equilibrium.in  water_system.lmp
examples/output/input/: liquid_box_1components.json  liquid_box_1components.lmp  liquid_box_1components_pointenergy.in
src/mcp_lammps/: data_handler.py  lammps_interface.py  server.py  simulation_manager.py  slurm_interface.py  slurm_manager.py
src/mcp_lammps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_lammps/data/: gaff_parameters.json
src/mcp_lammps/force_fields/: gaff.lt
src/mcp_lammps/parsers/: __init__.py
src/mcp_lammps/tools/: analysis_tools.py  control_tools.py  monitoring_tools.py  organic_tools.py  property_tools.py  setup_tools.py  slurm_tools.py
src/mcp_lammps/utils/: __init__.py  converters.py  forcefield_utils.py  openff_utils.py  packmol_utils.py  script_generator.py  slurm_config.py  validators.py
tests/: test_charge_assignment.py  test_openff_utils.py  test_organic_tools.py  test_server.py  test_slurm_interface.py  test_slurm_manager.py
